Fixed overlapping css commands: have to uniquely name all containers :(

--- a/my-app/src/components/css/SettingsPage.css
+++ b/my-app/src/components/css/SettingsPage.css
@@ -9,7 +9,7 @@
 	height: 5vh;
 }
 
-.settingsPageTitle{
+.adminSettingsPageTitle{
 	font-family: Arial Black;
     font-style: normal;
     font-weight: 900;
@@ -42,21 +42,21 @@
 	flex-direction: column;
 	margin-left: 0vw;
 	width: 70vw;
-	height: 23vh;
+	height: 10vh;
 }
 
-.emailContainer{
+.emailContainerS{
 	width: 50vw;
-	height: 5vh;
+	height: 10vh;
 	font-family: Arial Black;
     font-style: normal;
 	margin-right: 0vw;
 	margin-left: 0vw;
-	margin-top: 5vh;
-	margin-bottom: 2vh;
+	margin-top: 1vh;
+	margin-bottom: 1vh;
 }
 
-.emailText{
+.emailTextS{
 	margin-left: 0vw;
 	font-family: Arial;
 	font-style: normal;
@@ -77,7 +77,7 @@
 .formContainer{
 	display: flex;
 	flex-direction: column;
-	height: 25vh;
+	height: 10vh;
 	width: 50vw;
 	margin-top: 0vh;
 }
@@ -106,7 +106,7 @@
 	flex-direction: row;
 }
 
-.emailInputBox{
+.emailInputBoxS{
 	margin-top: 0vh;
 	margin-right: 0vw;
 	margin-left: auto;
@@ -220,7 +220,8 @@
 .secondRowContainer{
 	display: flex;
 	flex-direction: row;
-	margin-top: 10vh;
+	margin-top: 1vh;
+	height: 20vh;
 }
 
 .scrapeHistoryToggle:hover, .advancedSearchToggle:hover, .emailNotifToggle:hover{
@@ -333,8 +334,8 @@
     background: #0094FF;
     border: 1px solid #000000;
     box-sizing: border-box;
-	margin-left: 1vw;
-	margin-right: 20vw;
+	margin-left: 8vw;
+	margin-right: 0vw;
 	margin-bottom: 0px;
 	margin-top: 1vh;
 }
